--- a/src/app/components/tabs/meetings/meetings.tab.component.css
+++ b/src/app/components/tabs/meetings/meetings.tab.component.css
@@ -21,7 +21,7 @@
     font-size: 2em;
     display: flex;
     justify-content: center;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.549);
     color:#dad2ad;
     margin-bottom: 35px;
     border-radius: 5px;
